--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-#icon-001-shopping-cart {
+#icon-003-shopping-cart {
   fill: red; }
 
 .visuallyhidden {
@@ -16,3 +16,6 @@
 
 body {
   background: yellow; }
+
+.icon {
+  fill: green; }
